--- a/bspwm/home/.config/polybar/config
+++ b/bspwm/home/.config/polybar/config
@@ -16,148 +16,263 @@
 ;
 ;==========================================================
 
-
+;  ###   ###  #     ###  ####   ####
+; #   # #   # #    #   # #   # #    
+; #     #   # #    #   # ####  #### 
+; #   # #   # #  # #   # #   #     #
+;  ###   ###  ###   ###  #   # #### 
 
 [colors]
-background = #222
-background-alt = #444
-foreground = #EEE
-foreground-alt = #555
-primary = #777
-secondary = #e60053
-alert = #bd2c40
-alter1 = #444
-alter2 = #222
+background = ${xrdb:color16:#222222}
+;${xrdb:color0:#222}
+foreground = ${xrdb:color7:#222}
+foreground-alt = ${xrdb:color5:#222}
+primary = ${xrdb:color1:#222}
+secondary = ${xrdb:color2:#222}
+alert = ${xrdb:color3:#222}
 
 
+
+
+
+; ####   ####  ####      ##
+; #   # #    # #   #    # #
+; ####  ###### ####       #
+; #   # #    # #   #      #
+; ####  #    # #   #    #####
 
 [bar/bar1]
 monitor = ${env:MONITOR:eDP}
-width = 98%
+
+width = 100%
 height = 25
-offset-x = 1%
+;offset-x = 1%
+
 radius = 0
 fixed-center = true
+
 background = ${colors.background}
 foreground = ${colors.foreground}
+
+
 line-size = 3
 line-color = #f00
+
 border-size = 0
 border-color =#00000000
+
 padding-left = 2
 padding-right = 2
+
 module-margin-left = 1
 module-margin-right = 1
+
+;font-0 = FontAwesome:size=12;0
+;font-1 = FontAwesome:size=18;2
+
 font-0 = FiraCode:size=10
-font-1 = Material Design Icons:size=10;0
-font-2 = FontAwesome:size=10;0
-font-3 = Noto Color Emoji:size=8;0
+font-1 = Noto Color Emoji:size=8;0
+font-2 = fontAwesome:size=14;2
+font-3 = fontAwesome:size=18;2
+font-4 = fontAwesome:size=16;2
+
 modules-left = bspwm
 modules-center = date
-modules-right = pulseaudio memory cpu battery
+modules-right = pulseaudio wlan memory cpu battery
+
 tray-position = right
 tray-padding = 2
+
 wm-restack = bspwm
+
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 
 
+
+
+; ####   #### ####  #   # ## ##
+; #   # #     #   # #   # # # #
+; ####  ####  ####  # # # # # #
+; #   #     # #     # # # #   #
+; ####  ####  #      # #  #   #
+
 [module/bspwm]
 type = internal/bspwm
-label-focused = %name%
-label-focused-background = ${colors.alter1}
+BSPWM_SOCKET = "bspwm_0_0-socket"
+label-focused = %icon%
+label-focused-background = ${colors.background}
+label-focused-foreground = ${colors.alert}
 label-focused-padding = 1
-label-focused-underline = ${colors.alter2}
-label-occupied = %name%
+label-focused-underline = ${colors.alert}
+label-focused-font = 1
+
+label-occupied = %icon%
 label-occupied-padding = 1
-label-urgent = %name%!
+label-occupied-foreground = ${colors.foreground-alt}
+
+label-urgent = %icon%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
-label-empty = %name%
-label-empty-foreground = ${colors.foreground-alt}
+
+label-empty = %icon%
+label-empty-foreground = ${colors.foreground}
 label-empty-padding = 1
 
+; ws-icon-[0-9]+ = label;icon
+ws-icon-0 = 01;%{T4}%{T-}
+ws-icon-1 = 02;%{T4}%{T-}
+ws-icon-2 = 03;%{T4}%{T-}
+ws-icon-3 = 04;%{T5}%{T-}
+ws-icon-4 = 05;%{T4}%{T-}
+ws-icon-5 = 06;%{T4}%{T-}
+ws-icon-6 = 07;%{T4}%{T-}
+ws-icon-7 = 08;%{T4}%{T-}
+ws-icon-8 = 09;%{T5}%{T-}
+ws-icon-9 = 10;%{T5}%{T-}
+ws-icon-default = ♟
 
+
+
+
+
+;  ###  ####  #   #
+; #   # #   # #   #
+; #     ####  #   #
+; #   # #     #   #
+;  ###  #      ###
 
 [module/cpu]
 type = internal/cpu
-interval = 1.0
-format = <label> <ramp-coreload>
+interval = 0.5
+format =  <ramp-coreload>
 ramp-coreload-0 = ▁
 ramp-coreload-0-font = 0
 ramp-coreload-0-foreground = #aaff77
 ramp-coreload-1 = ▂
 ramp-coreload-1-font = 0
 ramp-coreload-1-foreground = #aaff77
+ramp-coreload-2 = ▃
+ramp-coreload-2-font = 0
+ramp-coreload-2-foreground = #aaff77
+ramp-coreload-3 = ▄
+ramp-coreload-3-font = 0
+ramp-coreload-3-foreground = #aaff77
+ramp-coreload-4 = ▅
+ramp-coreload-4-font = 0
+ramp-coreload-4-foreground = #fba922
+ramp-coreload-5 = ▆
+ramp-coreload-5-font = 0
+ramp-coreload-5-foreground = #fba922
+ramp-coreload-6 = ▇
+ramp-coreload-6-font = 0
+ramp-coreload-6-foreground = #ff5555
+ramp-coreload-7 = █
+ramp-coreload-7-font = 0
+ramp-coreload-7-foreground = #ff5555
 
 
+
+
+
+; ## ## ##### ## ##  ###  ####  #   #
+; # # # #     # # # #   # #   # #   #
+; # # # ###   # # # #   # ####   ####
+; #   # #     #   # #   # #   #     #
+; #   # ##### #   #  ###  #   # ####
 
 [module/memory]
 type = internal/memory
 format = <label> <bar-used>
-label = RAM
-bar-used-width = 8
-bar-used-foreground-0 = #aaff77
-bar-used-foreground-1 = #aaff77
-bar-used-foreground-2 = #fba922
-bar-used-foreground-3 = #ff5555
+label = 
+label-font = 1
+bar-used-width = 5
+bar-used-foreground-0 = ${colors.foreground-alt}
+bar-used-foreground-1 = ${colors.foreground-alt}
+bar-used-foreground-2 = ${colors.foreground-alt}
+bar-used-foreground-3 = ${colors.foreground-alt}
 bar-used-indicator = |
-bar-used-indicator-font = 0
-bar-used-indicator-foreground = #ff
+bar-used-indicator-foreground = ${colors.alert}
 bar-used-fill = ─
-bar-used-fill-font = 0
 bar-used-empty = ─
-bar-used-empty-font = 0
-bar-used-empty-foreground = #444444
+bar-used-empty-foreground = ${colors.foreground-alt}
 
 
+
+
+
+; ####   ###  ##### #####
+; #   # #   #   #   #
+; #   # #####   #   ###
+; #   # #   #   #   #
+; ####  #   #   #   #####
 
 [module/date]
 type = internal/date
 interval = 5
-date = " %m/%d/%y"
-date-alt = " %Y-%m-%d"
-time = %H:%M
-time-alt = %H:%M:%S
-format-prefix-foreground = ${colors.foreground}
-format-prefix-background = ${colors.alter2}
-label = %date% %time%
-label-foreground = ${colors.foreground}
-label-background = ${colors.alter2}
+
+date = "%A - %h %d, %Y"
+date-alt = "%A - %h %d, %Y"
+
+time = %l:%M%P
+time-alt = %l:%M%P
+
+label =  %date%   %time%
+label-foreground = ${colors.foreground-alt}
+label-background = ${colors.background}
 
 
+
+
+
+; ####  #   # #     #### #####       ###  #   # ####  #####  ###
+; #   # #   # #    #     #          #   # #   # #   #   #   #   #
+; ####  #   # #    ####  ###        ##### #   # #   #   #   #   #
+; #     #   # #  #     # #          #   # #   # #   #   #   #   #
+; #      ###  ###  ####  #####      #   #  ###  ####  #####  ###
 
 [module/pulseaudio]
 type = internal/pulseaudio
 sink = alsa_output.pci-0000_00_09.2.analog-stereo
+master-soundcard = hw:1
+
 format-volume = <label-volume> <bar-volume>
 format-volume-padding = 2
-label-volume = VOL %percentage%%
-label-volume-foreground = ${root.foreground}
-label-muted = X muted
-label-muted-foreground = #666
+
+label-volume =  %percentage%%
+label-volume-foreground = ${colors.foreground}
+
+label-muted =  X 00% ──────────
+label-muted-foreground = ${colors.alert}
+label-muted-padding = 2
+
 bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+
+bar-volume-foreground-0 =${colors.foreground-alt}
+bar-volume-foreground-1 =${colors.foreground-alt}
+bar-volume-foreground-2 =${colors.foreground-alt}
+bar-volume-foreground-3 =${colors.foreground-alt}
+bar-volume-foreground-4 =${colors.foreground-alt}
+bar-volume-foreground-5 = ${colors.foreground-alt}
+bar-volume-foreground-6 = ${colors.foreground-alt}
+
 bar-volume-gradient = false
 bar-volume-indicator = |
-#bar-volume-indicator-font = 7
-bar-volume-indicator-font = 0
+bar-volume-indicator-foreground = ${colors.secondary}
 bar-volume-fill = ─
-#bar-volume-fill-font = 7
-bar-volume-fill-font = 0
 bar-volume-empty = ─
-#bar-volume-empty-font = 7
-bar-volume-empty-font = 0
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
 
+
+
+
+; ####   ###  ##### ##### ##### ####  #   #
+; #   # #   #   #     #   #     #   # #   #
+; ####  #####   #     #   ###   ####   ####
+; #   # #   #   #     #   #     #   #     #
+; ####  #   #   #     #   ##### #   # ####
 
 [module/battery]
 type = internal/battery
@@ -165,33 +280,112 @@ full-at = 99
 battery = BAT0
 adapter = AC
 poll-interval = 5
-format-charging = <animation-charging>  <label-charging>
-format-discharging = <ramp-capacity>  <label-discharging>
-format-full = <ramp-capacity>  <label-full>
+
+;format-charging = <animation-charging>  <label-charging>
+;format-discharging = <ramp-capacity>  <label-discharging>
+;format-full = <ramp-capacity>  <label-full>
+format-charging = <animation-charging>
+format-discharging = <ramp-capacity>
+format-full = <ramp-capacity>
+
 label-charging = %percentage%
 label-discharging = %percentage%
 label-full = %percentage%
-format-charging-padding = 3
-format-discharging-padding = 3
-format-full-padding = 3
-ramp-capacity-0 = %{T3}%{T-}
-ramp-capacity-1 = %{T3}%{T-}
-ramp-capacity-2 = %{T3}%{T-}
-ramp-capacity-3 = %{T3}%{T-}
-ramp-capacity-4 = %{T3}%{T-}
-animation-charging-0 = %{T3}%{T-}
-animation-charging-1 = %{T3}%{T-}
-animation-charging-2 = %{T3}%{T-}
-animation-charging-3 = %{T3}%{T-}
-animation-charging-4 = %{T3}%{T-}
+
+format-charging-padding = 0
+format-discharging-padding = 0
+format-full-padding = 0
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-framerate = 750
 
 
+
+
+; ####   ###  #   #  ###  #     #   # ## ## #####
+; #   # #   # #   # #   # #     #   # # # # #
+; ####  #####  # #  #   # #     #   # # # # ###
+; #     #   #  # #  #   # #     #   # #   # #
+; #     #   #   #    ###  #####  ###  #   # #####
+
+[module/pavolume]
+type = custom/script
+interval = 2
+label=VOLUME:%output%
+exec = ~/.config/polybar/pavolume.sh
+click-right = exec pavucontrol
+click-left = ~/.config/polybar/pavolume.sh --togmute
+scroll-up = ~/.config/polybar/pavolume.sh --up
+scroll-down = ~/.config/polybar/pavolume.sh --down
+label-padding = 2
+label-foreground = ${colors.foreground}
+
+
+
+
+; #   # #      ###   ##  #
+; #   # #     #   #  # # #
+; # # # #     #####  # # #
+; # # # #     #   #  # # #
+;  # #  ##### #   #  #  ##
+
+[module/wlan]
+type = internal/network
+interface = wlp2s0
+interval = 3.0
+
+format-connected = <ramp-signal> <label-connected>
+
+format-connected-padding = 0
+
+label-connected = %essid%
+label-connected-foreground = ${colors.foreground-alt}
+
+format-disconnected = <label-disconnected>
+format-disconnected-underline = ${colors.alert}
+
+label-disconnected = %ifname% disconnected
+label-disconnected-foreground = ${colors.foreground-alt}
+
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
+ramp-signal-foreground = ${colors.foreground-alt}
+
+
+
+
+
+;  #### ##### ##### ##### ##### ##  #  ###   ####
+; #     #       #     #     #   # # # #   # #
+;  ###  ###     #     #     #   # # # #      ###
+;     # #       #     #     #   # # # #  ##     #
+; ####  #####   #     #   ##### #  ##  ###  ####
 
 [settings]
 screenchange-reload = true
 
 
+
+
+
+; #   # ## ##
+; #   # # # #
+; # # # # # #
+; # # # #   #
+;  # #  #   #
 
 [global/wm]
 margin-top = 0
